--- a/src/components/TopNav/index.css
+++ b/src/components/TopNav/index.css
@@ -75,13 +75,22 @@ button2 {
   font-size: 1.1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #c9e265;
+  background-color: #000000;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 
+box2 {
+  width: 50px;
+  height: 50px;
+
+
+  padding: px;
+  background-color: #c9e265;
+ }
+
 button2:hover {
-  border-color: #ffffff;
+  border-color: #c9e265;
 }
 button2:focus,
 button2:focus-visible {
