--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  color: #C9E265;
+  color: #187175;
   display: inline;
 
 }
@@ -46,7 +46,7 @@ h2 {
 h22{
   font-size: 2em;
   line-height: 1.1;
-  color: #C9E265;
+  color: #c9e265;
   display: inline;
  
 }
