--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@ button2 {
   font-size: 1.1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #C9E265;
+  background-color: #c9e26588;
   cursor: pointer;
   transition: border-color 0.25s;
 
